<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#80000000">

    <LinearLayout
        android:id="@+id/permission_bg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/shape_round_corner_white"
        android:orientation="vertical"
        android:paddingBottom="30.0dip">

        <TextView
            android:id="@+id/permission_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30.0dip"
            android:textColor="#ff333333"
            android:text="温馨提示"
            android:textSize="20.0sp" />
        <TextView
            android:id="@+id/tv_permission_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="25.0dip"
            android:layout_marginTop="12.0dip"
            android:layout_marginRight="25.0dip"
            android:textColor="#ff666666"
            android:text="@string/permission_tip_text"
            android:textSize="13.0sp" />


        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="200dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:paddingRight="@dimen/dp_10"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/permission_item_img"
                        android:layout_width="28.0dip"
                        android:layout_height="28.0dip"
                        android:layout_marginRight="15.0dip"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/ic_sdcard_per"
                        android:visibility="visible" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/permission_item_img"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/permission_item_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginBottom="5.0dip"
                            android:lineSpacingExtra="4.0dip"
                            android:textColor="@color/mcbd_main_text_icon_color"
                            android:text="手机存储"
                            android:textSize="12.0sp" />

                        <TextView
                            android:id="@+id/permission_item_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:ellipsize="end"
                            android:lineSpacingExtra="4.0dip"
                            android:maxLines="2"
                            android:text="@string/permission_tip_phone_sdcard"
                            android:textColor="@color/mcbd_tertiary_text_color"
                            android:textSize="12.0sp" />
                    </LinearLayout>


                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:visibility="gone"
                    android:paddingLeft="30dp"
                    android:paddingRight="@dimen/dp_10"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/permission_item_img4"
                        android:layout_width="28.0dip"
                        android:layout_height="28.0dip"
                        android:layout_marginRight="15.0dip"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/ic_location_per"
                        android:visibility="visible" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/permission_item_img4"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/permission_item_name4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginBottom="5.0dip"
                            android:lineSpacingExtra="4.0dip"
                            android:textColor="@color/mcbd_main_text_icon_color"
                            android:text="定位信息"
                            android:textSize="12.0sp" />

                        <TextView
                            android:id="@+id/permission_item_desc4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:ellipsize="end"
                            android:lineSpacingExtra="4.0dip"
                            android:maxLines="2"
                            android:text="@string/permission_tip_location"
                            android:textColor="@color/mcbd_tertiary_text_color"
                            android:textSize="12.0sp" />
                    </LinearLayout>


                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:layout_marginTop="15dp"
                    android:paddingRight="@dimen/dp_10"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/permission_item_img2"
                        android:layout_width="28.0dip"
                        android:layout_height="28.0dip"
                        android:layout_marginRight="15.0dip"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/ic_phone_per"
                        android:visibility="visible" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/permission_item_img2"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/permission_item_name2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginBottom="5.0dip"
                            android:lineSpacingExtra="4.0dip"
                            android:textColor="@color/mcbd_main_text_icon_color"
                            android:text="手机状态"
                            android:textSize="12.0sp" />

                        <TextView
                            android:id="@+id/permission_item_desc2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:ellipsize="end"
                            android:lineSpacingExtra="4.0dip"
                            android:maxLines="2"
                            android:text="@string/permission_tip_phone_state"
                            android:textColor="@color/mcbd_tertiary_text_color"
                            android:textSize="12.0sp" />
                    </LinearLayout>


                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:layout_marginTop="15dp"
                    android:paddingRight="@dimen/dp_10"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/permission_item_img3"
                        android:layout_width="27dp"
                        android:layout_height="30dp"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15.0dip"
                        android:src="@mipmap/ic_camera_per"
                        android:visibility="visible" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/permission_item_img3"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/permission_item_name3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginBottom="5.0dip"
                            android:lineSpacingExtra="4.0dip"
                            android:textColor="@color/mcbd_main_text_icon_color"
                            android:text="相机"
                            android:textSize="12.0sp" />

                        <TextView
                            android:id="@+id/permission_item_desc3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:ellipsize="end"
                            android:lineSpacingExtra="4.0dip"
                            android:maxLines="2"
                            android:text="@string/permission_tip_camera"
                            android:textColor="@color/mcbd_tertiary_text_color"
                            android:textSize="12.0sp" />
                    </LinearLayout>


                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="20dp"
                    android:paddingRight="@dimen/dp_10"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/permission_item_img5"
                        android:layout_width="28.0dip"
                        android:layout_height="28.0dip"
                        android:layout_marginRight="15.0dip"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/ico_other_per"
                        android:visibility="visible" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/permission_item_img5"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/permission_item_name5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginBottom="5.0dip"
                            android:lineSpacingExtra="4.0dip"
                            android:textColor="@color/mcbd_main_text_icon_color"
                            android:text="其他权限等"
                            android:textSize="12.0sp" />

                        <TextView
                            android:id="@+id/permission_item_desc5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:ellipsize="end"
                            android:lineSpacingExtra="4.0dip"
                            android:maxLines="2"
                            android:text="@string/permission_tip_other"
                            android:textColor="@color/mcbd_tertiary_text_color"
                            android:textSize="12.0sp" />
                    </LinearLayout>


                </RelativeLayout>


            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>



        <CheckBox
            android:id="@+id/permission_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10.0dip"
            android:layout_marginBottom="5.0dip"
            android:button="@drawable/selector_checkbox"
            android:checked="false"
            android:paddingLeft="5.0dip"
            android:text="不再提醒"
            android:visibility="visible"
            android:textColor="#ff999999"
            android:textSize="12.0sp" />

        <TextView
            android:textColor="@color/gray_d8"
            android:layout_gravity="center"
            android:visibility="gone"
            android:text="暂不更新"
            android:textSize="16sp"
            android:id="@+id/cancelBtn"
            android:tag="beta_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/permission_btn"
            android:layout_width="160.0dip"
            android:layout_height="44.0dip"
            android:layout_gravity="center"
            android:layout_marginLeft="15.0dip"
            android:layout_marginTop="15dip"
            android:layout_marginRight="15.0dip"
            android:background="@drawable/shape_btn_blue"
            android:text="好的"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16.0sp" />
    </LinearLayout>
    <TextView
        android:id="@+id/permission_close"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:tag="beta_cancel_button"
        android:text="暂不更新"
        android:visibility="gone"
        android:textColor="@color/gray_d8"
        android:textSize="16sp" />
    <ImageView
        android:id="@+id/permission_close1"
        android:layout_width="15.0dip"
        android:layout_height="15.0dip"
        android:layout_alignTop="@+id/permission_bg"
        android:layout_alignRight="@+id/permission_bg"
        android:layout_gravity="right"
        android:layout_marginTop="10dip"
        android:layout_marginRight="11.0dip"
        android:scaleType="centerInside"
        android:src="@mipmap/ico_close"
        android:visibility="visible" />
</RelativeLayout>